# f_brain

./: README.md  docker-compose.yml  grafana.ini  prometheus.yml
.github/workflows/: cd.yml  ci.yml
client/: Dockerfile  package-lock.json
client/src/: App.jsx  index.css  main.jsx
client/src/pages/: HistoryPage.css  HistoryPage.jsx  LoginPage.css  LoginPage.jsx  RegisterPage.css  RegisterPage.jsx  TranslatePage.css  TranslatePage.jsx
client/src/services/: api.js
proxy/: Dockerfile  default.conf
server/: Dockerfile  pyproject.toml  requirements.txt
server/server_config/: celery.py  settings.py  urls.py
server/translator/: models.py  serializers.py  tasks.py  urls.py  views.py
